--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,10 @@ a {
 }
 .degree, .job {
   padding: 1em;
+}
 
+.degree-header > h2, .degree > h3 {
+  cursor: default;
 }
 
 .degree:hover, .job:hover {
@@ -55,4 +58,41 @@ a {
   margin-left: 0.25em;
   margin-right: 0.25em;
   border-radius: 25px;
+}
+
+.projects-container {
+  display: flex;
+  justify-content: center;
+}
+.project {
+  text-align: center;
+  height: 25%;
+  width: 25%;
+}
+.img-container {
+  position: relative;
+  cursor: pointer; 
+}
+.img-container>img {
+  max-width: 100%;
+  border-radius: 2rem
+}
+.blur-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  height: 100%;
+  width: 100%;
+  top: 0%;
+  opacity: 0;
+  border-radius: 2rem
+}
+
+.blur-container:hover{
+ opacity: 1;
+ -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
 }
