--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@ body {
   color: var(--text-color);
 }
 
+.mobile-name {
+  display: none;
+  /* position: absolute; */
+}
 .mainpage {
   display: flex;
   margin-left: 160px;
@@ -24,7 +28,8 @@ body {
 
 .sidebar {
   background-color: var(--side-bg-color);
-  margin-right: 10em;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 160px;
   position: fixed;
@@ -35,20 +40,24 @@ body {
 .sidebar-links {
   display: flex;
   flex-direction: column;
-  text-align: right;
+  flex-grow: 1;
+  justify-content: center;
 }
-.link {
-  margin-top: 10px;
-}
+
 button {
-  background-color: var(--main-bg-color);
+  background-image: linear-gradient(to right, var(--side-bg-color) 50%, var(--main-bg-color) 50%);
+  background-color: transparent;
+  background-position: left;
   color: var(--text-color);
   border: none;
-  /* border-radius: 10px; */
+  background-size: 200%; 
   padding: 5px;
+  transition: background-position;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 0);
+  transition-duration: 250ms;
 }
 button:hover {
-  background-color: var(--skill-bg-color);
+  background-position: right;
 }
 
 .programming-img{
@@ -138,4 +147,20 @@ button:hover {
   opacity: 1;
   -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
+}
+
+@media screen and (max-width: 600px) {
+  .mainpage {
+    margin-left: 0;
+  }
+  .mobile-name {
+    display: block;
+    text-align: center;
+  }
+  .sidebar {
+    visibility: hidden;
+  }
+  .degree-header>h2, .school-name, .job-header>h2, .company-name {
+    font-size: medium;
+  }
 }
